--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,33 @@
 body {
   font-family: "Montserrat", sans-serif;
 }
+/* ScrollToTop.css */
+
+.scroll-top-btn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 99;
+  font-size: 20px;
+  border: none;
+  outline: none;
+  background-color: black;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  transition: opacity 0.3s ease;
+}
+
+.scroll-top-btn.show {
+  display: block;
+}
+
+.scroll-top-btn:hover {
+  opacity: 0.5;
+}
 
 /* Add some margin to the top of each section */
 section {
@@ -33,8 +60,7 @@ section {
 /* Style for project cards */
 .project-card {
   transition: transform 0.3s ease-in-out;
-  margin-bottom: 20px;
-  height: 400px;
+  margin: 30px 0px;
 }
 
 .project-card:hover {
@@ -44,13 +70,21 @@ section {
 .card_img {
   height: 200px;
 }
-
-.project-card p {
-  height: 70px;
+.project-card h5 {
+  height: 50px;
 }
 
 #contact {
   background: #333;
+}
+
+.contact_section span {
+  font-size: 16px;
+}
+
+.mail_section a {
+  color: white;
+  text-decoration: none;
 }
 
 /* Style for the footer */
